8139041: Redundant DMB instructions

Merge consecutive DMB intstructions

Reviewed-by: roland, kvn, twisti